environments/prod/kubernetes/services/payments/payout-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payout-processor
  labels:
    app: payout-processor
    env: prod
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payout-processor
  revisionHistoryLimit: 1
  template:
    metadata:
      name: payout-processor
      labels:
        env: prod
        app: payout-processor
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: payout-processor
        image: steblynskyi-docker.jfrog.io/payments-payout-processor:58bb7d7f
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
