environments/prod/kubernetes/services/payments/correction-tool-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: correction-tool-api
  labels:
    app: correction-tool-api
    env: prod
  namespace: payments
spec:
  replicas: 3
  selector:
    matchLabels:
      app: correction-tool-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: correction-tool-api
      labels:
        env: prod
        app: correction-tool-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: correction-tool-api
        image: steblynskyi-docker.jfrog.io/payments-correction-tool-api:8ccae46
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: correction-tool-api
  namespace: payments
  labels:
    Domain: payments-correction-tool-api.steblynskyi.com
spec:
  selector:
    app: correction-tool-api
    env: prod
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  type: NodePort
