environments/prod/kubernetes/services/payments/payments-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-web
  labels:
    app: payments-web
    env: prod
  namespace: payments
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: payments-web
      labels:
        app: payments-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: payments-web
          image: steblynskyi-docker.jfrog.io/payments-web:ebc7666
          imagePullPolicy: IfNotPresent
          args:
            - -base-path=/
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: payments-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: payments-web
  namespace: payments
  labels:
    Domain: payments-web.steblynskyi.com
spec:
  selector:
    app: payments-web
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
