environments/prod/kubernetes/services/payments/reports-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-web
  labels:
    app: reports-web
    env: prod
  namespace: payments
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: reports-web
      labels:
        app: reports-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: reports-web
          image: steblynskyi-docker.jfrog.io/payments-reports-web:cac929e
          imagePullPolicy: IfNotPresent
          args:
            - -base-path=/reports/payments
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: reports-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: reports-web
  namespace: payments
  labels:
    Domain: payments-reports-web.steblynskyi.com
spec:
  selector:
    app: reports-web
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
